--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "iview": "^2.7.3",
     "jquery": "^3.2.1",
     "jquery.cookie": "^1.4.1",
+    "js-storage": "^1.0.4",
     "postcss-loader": "^2.0.5",
     "precss": "^1.4.0",
     "prop-types": "^15.5.10",
